# rostender-parse

./: .gitignore  .gitmodules  2_stage_fixes_plan.md  2_stage_fixes_plan_2.md  AGENTS.md  CURRENT_ANALYZE_DESIGN.md  PROTOCOL_ANALYSIS_ARCHITECTURE.md  README.md  STRUCTURE.md  UNIFIED_PLAN.md  Untitled.ipynb  analize_refactor_plan.md  analize_refactor_plan_qwen35.md  analysis_test_results.json  analyze_refactor_plan_qwen.md  analyze_test_results.py  check_accuracy.py  config.yaml.example  downloads-proccessed.md  login_config_plan.md  protocol_analysis_docs.md  pyproject.toml  pytest.ini  redesign_plan.md  requirements.txt
.specify/extensions/: README.md  (+3 more)
TS_Q/: 1-2_code_review.md  1-6_steps_report.md  first_plan.md  first_questions.md  report.md  report_steps_1_2.md  selectors_verification.md  technical_specifications.md  updated_plan.md  созвон.txt
scripts/: test_eis_fallback_logic.py  test_eis_manual.py
src/: __init__.py  config.py  main.py  metrics-after.md  metrics-before.md
tests/: conftest.py  test_active_tenders.py  test_analyze_history_stage.py  test_analyzer.py  test_auth.py  test_browser.py  test_config.py  test_console_report.py  test_docx_parser.py  test_eis_fallback.py  test_excel_report.py  test_extended_search_stage.py  test_external_fallbacks.py  test_external_fallbacks_manual.py  test_historical_search.py  test_history_helpers.py  test_html_protocol.py  test_isolation.py  test_main.py  test_params.py  test_parser.py  test_pdf_parser.py  test_persistence.py  test_report_stage.py  test_repository.py  test_search_active_stage.py  test_source_links.py
(+86 files in other folders)
