[project]
name = "rostender-parse"
version = "0.1.0"
description = "Parser for rostender.info — поиск тендеров с низкой конкуренцией"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "aiosqlite>=0.19",
    "python-docx>=1.0",
    "pdfplumber>=0.10",
    "openpyxl>=3.1",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
rostender = "src.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
